--- a/app/src/main/res/layout/images_layout.xml
+++ b/app/src/main/res/layout/images_layout.xml
@@ -3,24 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="22dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/imageInLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="fitXY"
         android:src="@drawable/image_first"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
+        android:layout_marginRight="0dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/text1InLayout"
         app:layout_constraintTop_toBottomOf="@id/imageInLayout"
         app:layout_constraintStart_toStartOf="@id/imageInLayout"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/josefin_sans_semibold"
@@ -31,7 +35,7 @@
         android:id="@+id/text2InLayout"
         app:layout_constraintTop_toBottomOf="@id/text1InLayout"
         app:layout_constraintStart_toStartOf="@id/imageInLayout"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/josefin_sans_semibold"
@@ -43,8 +47,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:progress="60"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:progressDrawable="@drawable/progress"
         app:layout_constraintEnd_toEndOf="@id/imageInLayout"
         app:layout_constraintTop_toBottomOf="@+id/imageInLayout"
@@ -58,7 +60,5 @@
         android:textColor="#000000"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="@id/progressBar"
-        app:layout_constraintTop_toTopOf="@id/progressBar"
-
-        />
+        app:layout_constraintTop_toTopOf="@id/progressBar"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
