fifth commit added second functional screen from my side conformation left.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
+        app:srcCompat="@drawable/back"
+        android:contentDescription="back"/>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -26,7 +27,8 @@
         android:layout_marginRight="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/avatar" />
+        app:srcCompat="@drawable/avatar"
+        android:contentDescription="avatar"/>
 
     <TextView
         android:id="@+id/tvproj"
@@ -73,36 +75,13 @@
         app:layout_constraintStart_toEndOf="@id/tvog"
         app:layout_constraintTop_toTopOf="@id/tvog" />
 
-<!--       <ProgressBar-->
-    <!--        android:id="@+id/progressBar"-->
-    <!--        style="?android:attr/progressBarStyleHorizontal"-->
-    <!--        android:layout_width="50dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="168dp"-->
-    <!--        android:layout_marginLeft="168dp"-->
-    <!--        android:layout_marginTop="112dp"-->
-    <!--        android:progress="60"-->
-    <!--        android:progressDrawable="@drawable/progress"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/tvcomp" />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView2"-->
-    <!--        android:layout_width="50dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:text="60%"-->
-    <!--        android:textColor="#000000"-->
-    <!--        android:gravity="center"-->
-    <!--        app:layout_constraintStart_toStartOf="@id/progressBar"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/progressBar" />-->
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="23dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@id/tvog"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvog"
+        android:layout_marginTop="23dp"
         tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
