--- a/app/src/main/res/layout/images_layout.xml
+++ b/app/src/main/res/layout/images_layout.xml
@@ -10,7 +10,8 @@
         android:id="@+id/imageInLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/image_first"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
