--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/josefin_sans</item>
         <item>@font/josefin_sans_bold</item>
+        <item>@font/josefin_sans_light</item>
         <item>@font/josefin_sans_semibold</item>
         <item>@font/josefin_sans_thin</item>
     </array>
